k8s/argo-rollouts/templates/argo-rollouts-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-server-http-ingress
  namespace: argo-rollouts
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-rollouts-dashboard
            port:
              number: 3100
    host: rollouts.devopsbrad.com
  # tls:
  # - hosts:
  #   - rollouts-dashboard.devopsbrad.com
  #   secretName: argocd-secret # do not change, this is provided by Argo CD
